Added a 'emphasys' in pieces that represent codes

--- a/2018/2018-02-23.md
+++ b/2018/2018-02-23.md
@@ -5,30 +5,37 @@
 ## Basics settings
 
 * Define the name to user
-`git config --global user.name KaiqueMunhoz`
+
+_git config --global user.name KaiqueMunhoz_
 
 * Define the email to user
-`git config --global user.email munhoz13km@gmail.com`
+
+_git config --global user.email munhoz13km@gmail.com_
 
 ## Managing the key ssh in your windows SO to access github
 
 * Generate a ssh-keygen
-`ssh-keygen -t rsa -b 4096 -C "munhoz13km@gmail.com"`
+
+_ssh-keygen -t rsa -b 4096 -C "munhoz13km@gmail.com"_
 
 * Define a password
-
 * Test it's running
-`eval "$(ssh-agent -s)"`
+
+_eval "$(ssh-agent -s)"_
 
 * Add the key
-`ssh-add ~/.ssh/id_rsa`
+
+_ssh-add ~/.ssh/id_rsa_
 
 * Copy public key
-`clip < ~/.ssh/id_rsa.pub`
+
+_clip < ~/.ssh/id_rsa.pub_
 
 * Add the content into github
-
 * Test if the connection is stablished
-`ssh -T git@github.com`
 
-* Confirm the message - Yes
+_ssh -T git@github.com_
+
+* Confirm the message
+
+_Yes_
