--- a/2018/2018-02-23.md
+++ b/2018/2018-02-23.md
@@ -20,7 +20,7 @@ _git config --global user.email munhoz13km@gmail.com_
 _ssh-keygen -t rsa -b 4096 -C "munhoz13km@gmail.com"_
 
 * Define a password
-* Test it's running
+* Test is running
 
 _eval "$(ssh-agent -s)"_
 
