--- a/2018/2018.md
+++ b/2018/2018.md
@@ -162,10 +162,10 @@ Inspired by Zeh Fernandes - Daily Log
 
 ### Lists
 
-- [Animes](2018/lists/animes.md)
-- [Articles](2018/lists/articles.md)
-- [Books](2018/lists/books.md)
-- [Courses](2018/lists/courses.md)
-- [Movies](2018/lists/movies.md)
-- [Quotes](2018/lists/quotes.md)
-- [Videos](2018/lists/videos.md)
+- [Animes](../lists/animes.md)
+- [Articles](../lists/articles.md)
+- [Books](../lists/books.md)
+- [Courses](../lists/courses.md)
+- [Movies](../lists/movies.md)
+- [Quotes](../lists/quotes.md)
+- [Videos](../lists/videos.md)
