feat: Add directory to each list

--- a/2018/2018.md
+++ b/2018/2018.md
@@ -162,10 +162,10 @@ Inspired by Zeh Fernandes - Daily Log
 
 ### Lists
 
-- [Animes](../lists/animes.md)
-- [Articles](../lists/articles.md)
-- [Books](../lists/books.md)
-- [Courses](../lists/courses.md)
-- [Movies](../lists/movies.md)
-- [Quotes](../lists/quotes.md)
-- [Videos](../lists/videos.md)
+- [Animes](../lists/animes/animes.md)
+- [Articles](../lists/articles/articles.md)
+- [Books](../lists/books/books.md)
+- [Courses](../lists/courses/courses.md)
+- [Movies](../lists/movies/movies.md)
+- [Quotes](../lists/quotes/quotes.md)
+- [Videos](../lists/videos/videos.md)
