fix: Move books into books folder

--- a/2018/2018.md
+++ b/2018/2018.md
@@ -22,7 +22,7 @@ Inspired by Zeh Fernandes - Daily Log
     - [Article - A incrível geração de mulheres que foi criada para ser tudo o que um homem não quer](http://emais.estadao.com.br/blogs/ruth-manus/a-incrivel-geracao-de-mulheres-que-foi-criada-para-ser-tudo-o-que-um-homem-nao-quer/)
 - *2018-02-26*
     - [Video - SIGMUND FREUD - LUIZ FELIPE PONDÉ](https://www.youtube.com/watch?v=oajDcp69lEQ&t=2223s)
-    - [Book - The Power of One Percent Better](2018/02-february/thePowerOfOnePercentBetter.md)
+    - [Book - The Power of One Percent Better](../lists/books/thePowerOfOnePercentBetter.md)
 - *2018-02-27*
     - [Video - O que aconteceria com você caso parasse de desperdiçar as oportunidades que surgem à sua frente?](https://dms.licdn.com/playback/C4E05AQEdgm4n7MNgVA/3bd352073e0946a5886a41dea682bdd7/feedshare-mp4_500/1479932728445-v0ch3x?e=1519873200&v=alpha&t=f9vhacgqvJY8c1gRLwP0FzQ4865sS5GMpM0AHq7Al-A)
     - [TreinaWeb - Elevator](2018/02-february/spread.js)
@@ -41,7 +41,7 @@ Inspired by Zeh Fernandes - Daily Log
     - [Article - Personality Tools Graves Model](https://personalityhacker.com/personality-tools-graves-model/)
 - *2018-03-03*
     - [Anime - 1988 - Akira](https://filmow.com/akira-t160/)
-    - [Book - Mitologia Nordica](../03-march/mitologiaNordica.md)
+    - [Book - Mitologia Nordica](../lists/books/mitologiaNordica.md)
     - [Article - How to Read](http://pne.people.si.umich.edu/PDF/howtoread.pdf)
 - *2018-03-04*
     - [Article - Será que o meu HTML está pronto?](https://www.devmedia.com.br/sera-que-o-meu-html-esta-pronto/39485?utm_source=facebook.com&utm_medium=cpc&utm_campaign=DevCast+-+Tr%C3%A1fego&utm_content=DevCast+39485)
@@ -62,8 +62,6 @@ Inspired by Zeh Fernandes - Daily Log
 - *2018-03-08*
     - [Article - How Chatbots are revolutionising brands communications with their customers](https://uxplanet.org/how-chatbots-are-revolutionising-brands-communication-with-their-customers-b811b5ebeb2)
     - [Article - The 5 types of creative block](https://blog.prototypr.io/the-5-types-of-creative-block-dea9dcf2a8e1)
-- *2018-03-09*
-    - [Book - Docker para Desenvolvedores](2018/03-march/dockerParaDesenvolvedores.md)
 - *2018-03-12*
     - [Article - How did I manage to get my first full stack developer job without a degree](https://medium.com/@ishtmeetsingh/how-did-i-manage-to-get-my-first-full-stack-developer-job-without-a-degree-f18c8d1624b1)
     - [Article - Principais vantagens da jet neo plataforma de e commerce](http://www.chicledigital.com.br/principais-vantagens-da-jet-neo-plataforma-de-e-commerce/)
